[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Squashed",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0362, 13.78 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.6599, 2.27936 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.1093, 12.3066 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 50
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Move"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.62939e-06, 2.6727 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 2

[node name="Top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_checker"]
position = Vector2( 0, -14.174 )
shape = SubResource( 3 )

[node name="Sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sides_checker"]
position = Vector2( 0.944946, 5.66964 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Top_checker" to="." method="_on_Top_checker_body_entered"]
[connection signal="body_entered" from="Sides_checker" to="." method="_on_Sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
